--- a/style.css
+++ b/style.css
@@ -1,92 +1,412 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     /* outline: 1px solid red; */
 }
-:root{
-    --BlackBackground:#202020;
-    --OrangeText:#F95F09;
-    --GrayText:#8b8b8b;
-    --SectionPadding:100px;
-    --SectionTitle:4rem;
+
+:root {
+    --BlackBackground: #202020;
+    --BlackTransparent: #272626;
+    --OrangeText: #F95F09;
+    --GrayText: #8b8b8b;
+    --SectionPadding: 100px;
+    --SectionTitle: 4.3rem;
 }
-h1 , h2 , h3 , h4 , p , div{
-    margin: 0;   
+
+h1,
+h2,
+h3,
+h4,
+p,
+div {
+    margin: 0;
 }
-.textOrange{
+
+.textOrange {
     color: var(--OrangeText);
 }
-.textGray{
+.bg-orange{
+    background-color: var(--OrangeText);
+}
+
+.textGray {
     color: var(--GrayText);
 }
-.sectionTitle{
+
+.sectionTitle {
     font-size: var(--SectionTitle);
     font-weight: bold;
 }
-.sectionLittleP{
+
+.sectionLittleP {
     font-size: 1rem;
 }
-.sectionP{
+
+.sectionP {
     font-size: 1.3rem;
 }
 
-nav .logo{
+
+
+nav {
+    z-index: 2;
+    padding: 20px 0;
+}
+
+nav .container button.startaproject {
+    background-color: transparent;
+    border: none;
+    right: -20px;
+    top: 140px;
+    color: white;
+    transform: rotate(90deg);
+    font-size: 1;
+}
+
+nav .contact {
+    color: white;
+    border: none;
+    border-bottom: 1px solid white;
+    align-self: center;
+    background-color: transparent;
+}
+
+nav .logo {
     font-size: 1.6rem;
     font-weight: bold;
+    color: white;
 }
-nav .menu{
+
+nav .menu {
     border-radius: 50%;
-    padding: 10px;
     width: 50px;
     height: 50px;
     border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
 }
-header{
-    min-height: 100vh;
-    padding: var(--SectionPadding) 0;
-    background-color:var(--BlackBackground) ;
+nav .menu svg{
+    pointer-events: none;
+}
+
+
+nav .nav-links {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    place-content: center;
+    position: fixed;
+    left: 0;
+    top:0;
+    z-index: -1;
+    background-color: #121111;
+    clip-path: circle(0% at 90% 30%);
+    /* clip-path: circle(0% at 90% 10%); */
+    -webkit-clip-path: circle(0% at 96% 30%);
+    /* -webkit-clip-path: circle(0% at 96% 10%); */
+    transition: all 1.2s ease-out;
+    pointer-events: none;
+}
+
+
+nav .nav-links.open {
+    clip-path: circle(300% at 96% 30%);
+    /* clip-path: circle(300% at 96% 10%); */
+    -webkit-clip-path: circle(300% at 96% 30%);
+    /* -webkit-clip-path: circle(300% at 96% 10%); */
+    pointer-events: all;
+}
+
+
+nav .nav-links .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.nav-links .container .menu-left {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    /* border: 1px solid blue; */
+    max-width: 500px;
+    width: 100%;
+}
+
+.nav-links .container .menu-left ul li {
+    transition: all 2s ease;
+    opacity: 1;
+}
+
+.nav-links .menu-left ul li.fade {
+    opacity: 1;
+}
+
+.nav-links .container .menu-left ul li a {
+    font-size: 4rem;
+    /* font-size: 2.6rem; */
+    color: white;
+    font-weight: bold;
+    display: block;
+    margin: 0 0 10px 0;
+    transform: scaleX(1.2);
+    transition: .5s ease;
+    position: relative;
+    left: -20px;
+    text-decoration: none;
+}
+
+.nav-links .container .menu-left ul li a:hover {
+    left: 0;
+}
+
+
+
+
+
+.nav-links .menu-left .menu-left-word {
+    font-size: 1rem;
+    font-weight: bold;
+    writing-mode: vertical-lr;
     color: white;
 }
-header .box{
+
+.nav-links .menu-right {
+    border: 1px solid red;
+    display: grid;
+    /* grid-template-columns: ; */
+}
+
+
+
+
+
+
+
+header {
+    min-height: 100vh;
+    padding: var(--SectionPadding) 10px;
+    background-color: var(--BlackBackground);
+    color: white;
+}
+
+header .box {
     position: relative;
     z-index: 1;
 }
-header p:nth-child(1){
+
+header .box p:first-child {
     letter-spacing: 8px;
 }
-header p:nth-last-child(2){
-    max-width: 750px;    
+
+header p:nth-last-child(2) {
+    max-width: 750px;
     width: 100%;
 }
-header img.G{
+
+header button {
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    position: relative;
+    width: 150px;
+}
+
+header button::before {
+    content: '';
+    position: absolute;
+    left: -5px;
+    bottom: 7px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--BlackTransparent);
+    z-index: -1;
+    border-radius: 50%;
+    transition: .5s ease;
+}
+
+header button:hover::before {
+    border-radius: 0px;
+    width: 160px;
+}
+
+header img.G {
     right: 200px;
     z-index: 0;
     width: 500px;
     object-fit: contain;
 }
-header img.E{
+
+header img.E {
     bottom: 0;
     z-index: 0;
-    right: 500px;
+    right: 200px;
     width: 200px;
     object-fit: contain;
 }
-section{
-    height: 100vh;
+
+header .stars {
+    right: 300px;
+    top: 300px;
+}
+
+header .arrow {
+    left: 30%;
+    bottom: 10px;
+}
+
+header p {
+    font-size: .7rem;
+}
+
+
+section.one{
+}
+section.one .box{
+
+    min-height:120vh;    
+    /* background-color: red; */
+    display: grid;
+    place-content: center;
+    gap: 200px;
+    padding: 0 10px;
+}
+section.one .box p{
+    width: min(100%, 700px);
+    font-size: 1.6rem;
+
+}
+section.one .text-right p ,
+section.one .text-left p {
+    z-index: 10;
+    transition: all 1s ease;
+}
+section.one .text-right p{
+    margin-left: auto;
+}
+section.one .text-left p::first-line{
+    background-color: var(--OrangeText);
+    color: white;
+}
+section.one .text-right .circle{
+    width: 200px;
+    height: 200px;
+    background-color: var(--OrangeText);
+    border-radius: 50%;
+    right: 300px;
+    top: -20px;
+    z-index: -1;
+}
+section.one img.stars2{
+    top:400px;
+    right:5%;
+}
+section.one img.stars3{
+    bottom: -50px;
+    left:5%;
+}
+section.one .oragne-box{
+    color: white;
+    padding: 100px 10px;
+    font-size: 2.4rem;
+    font-weight: 300;
+    overflow: hidden;
+}
+section.one .oragne-box::before{
+    position: absolute;
+    content: '';
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    left: -100px;
+    top: 100px;
+    background-color: rgba(255, 0, 0, 0);
+    border: 1px solid rgba(255, 255, 255, 0.349);
+    border-style: dashed;
+    border-width: 3px;
+    z-index: 0;
+    animation: rotate 70s linear infinite;
+}
+@keyframes rotate {
+    0%{
+        rotate: 0deg;
+    }
+    100%{
+        rotate: 360deg;
+    }
+}
+.fade-outFromRight{
+    opacity: 0;
+    transform: translateX(-20px);
+}
+.fade-inFromRight{
+    opacity: 1;
+    transform: translateX(0px);
+}
+
+
+
+.fade-outFromLeft{
+    opacity: 0;
+    transform: translateX(20px);
+}
+.fade-inFromLeft{
+    opacity: 1;
+    transform: translateX(0px);
+}
+
+
+
+
+
+/* section {
+    height: 120vh;
     width: 100%;
 }
-section.black{
+
+section.black {
     background-color: black;
 }
 
-.circle{
+.circle {
     position: fixed;
-    top: 100px;
+    top: 0px;
+    background-color: red;
     width: 100px;
     height: 100px;
-    /* background-color: red; */
     transition: .5s ease;
+} */
+
+
+@media (max-width:400px) {
+    html{
+        font-size: 10px;
+    }
+    img.stars{
+        top:80%;
+        left: 40%;
+    }
+    
+}
+
+
+@media (min-width:401px) and (max-width:787px) {
+    html{
+        font-size: 13px;
+    }
+}
+
+@media (min-width:768px) {
+    html{
+        font-size: 16px;
+    }
 }
